修改配置和单元测试类，由于添加了aviator函数模块